--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -34,10 +34,6 @@
             </tbody>
             {{/board}}
         </table>
-
-        <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="?page={{previous}}"></a></li>
-            <li class="page-item"><a class="page-link" href="?page={{next}}"></a></li>
-        </ul>
+        <button type="button" class="btn btn-primary" id="btn-read">더보기</button>
 
 {{>layout/footer}}
