--- a/src/main/resources/templates/boardUpdate.mustache
+++ b/src/main/resources/templates/boardUpdate.mustache
@@ -26,7 +26,7 @@
         <a href="/" role="button" class="btn btn-secondary">취소</a>
         <button type="button" class="btn btn-primary" id="btn-update">수정 완료</button>
         <button type="button" class="btn btn-danger" id="btn-delete">삭제</button>
-        <button type="button" class="btn btn-primary" id="btn-update">댓글</button>
+        <a href="/board/update/{{board.boardId}}/registration" role="button" class="btn btn-primary">댓글</a>
     </div>
 </div>
 
