--- a/src/main/resources/templates/commitregistration.mustache
+++ b/src/main/resources/templates/commitregistration.mustache
@@ -1,6 +1,6 @@
 {{>layout/header}}
 
-<h1>댓글 등록</h1>
+<h1>댓 등록</h1>
 
 <div class="col-md-12">
     <div class="col-md-4">
@@ -10,7 +10,7 @@
                 <textarea class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
             </div>
         </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
+        <a href="/" role="button" class="btn btn-primary">취소</a>
         <button type="button" class="btn btn-primary" id="btn-registration-commit">등록</button>
     </div>
 </div>
